# ttdft_public

./: AUTHORS  CMakeLists.txt  README.md  main.cc
atoms/: AtomInformation.cc  AtomInformation.h  NonLocalMap1D.cc  NonLocalMap1D.h  NonLocalMapManager.cc  NonLocalMapManager.h  NonLocalPSPData.cc  NonLocalPSPData.h
basis/: BasisFunctionReader.h  BasisLocalization.cc  BasisLocalization.h  PsiInitialGuessGnerator.cc  PsiInitialGuessGnerator.h  TuckerBasis.cc  TuckerBasis.h
blas_lapack/: clinalg.cc  clinalg.h
cmake/: CMakeSources.cmake
dft/: AndersonMixing.cc  AndersonMixing.h  InitialGuess.cc  InitialGuess.h  KSDFTEnergyFunctional.cc  KSDFTEnergyFunctional.h  KSDFTPotential.cc  KSDFTPotential.h  ProjectHamiltonianSparse.cc  ProjectHamiltonianSparse.h  RhoComputer.cc  RhoComputer.h  SeparableHamiltonian.cc  SeparableHamiltonian.h
dft/solver/: FunctionalRayleighQuotientSeperable.cc  FunctionalRayleighQuotientSeperable.h  FunctionalRayleighQuotientSeperableNonLocal.cc  FunctionalRayleighQuotientSeperableNonLocal.h
eigensolver/: ChebyShevFilter.cc  ChebyShevFilter.h  DeviceCommUtils.cc  DeviceCommUtils.h  DeviceUtils.cu  DeviceUtils.cuh  EigenSolver.cc  EigenSolver.h  Mult.h  MultCuda.cu  MultTm.cu  MultTm.h
example/: Density_AT0  alphak35_1e8  basis_x.txt  basis_y.txt  basis_z.txt  input.inp  locPotential_AT0  nlpV_AT0  nlpWaveFun_AT0  omegak35_1e8  output  shell1
fem/: FEM.cc  FEM.h  QuadratureRule.cc  QuadratureRule.h
hartree/: BoundaryValuesContainer.cc  BoundaryValuesContainer.h  HartreeCalculator.cc  HartreeCalculator.h  PhiBoundaryValuesContainer.cc  PhiBoundaryValuesContainer.h  PhiMultiPoleBoundaryValuesContainer.cc  PhiMultiPoleBoundaryValuesContainer.h  PhiZoverRBoundaryValuesContainer.cc  PhiZoverRBoundaryValuesContainer.h  PoissonHartreePotentialSolver.cc  PoissonHartreePotentialSolver.h
hartree/LinearSolver/: LinearSolver.cc  LinearSolver.h  LinearSolverFunction.cc  LinearSolverFunction.h  PETScLinearSolver.cc  PETScLinearSolver.h  PhiLinearSolverFunction.cc  PhiLinearSolverFunction.h
tensor/: Tensor3DMPI.cc  Tensor3DMPI.h  Tensor3DMPIMap.cc  Tensor3DMPIMap.h  TensorUtils.cc  TensorUtils.h  TuckerTensor.cc  TuckerTensor.h
utils/: Cartesian.h  FileReader.cc  FileReader.h  InputParameter.cc  InputParameter.h  InputParameterTemplate.inp  MatUtils.cc  MatUtils.h  Utils.cc  Utils.h  WavefunctionWriter.cc  WavefunctionWriter.h  ttdft_timer.h
